--- a/src/views/_layout.njk
+++ b/src/views/_layout.njk
@@ -4,17 +4,27 @@
   <head>
     <meta charset="UTF-8">
     <title>{{ appName }}</title>
-    <link href="{{ assetPath }}/site.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="{{ assetPath }}/favicon.ico"/>
+    <link href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css" rel="stylesheet" >
+    <link href="{{ assetPath }}/site.css" rel="stylesheet"/>
   </head>
 
   <body>
-    {% block content %}
-    {% endblock %}
+    <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <a class="navbar-item" href="/">
+          {{ appName }}
+        </a>
+      </div>
+    </nav>
+    <div class="container">
+      {% block content %}
+      {% endblock %}
+    </div>
     {% block bodyEnd %}
       <script src="{{ assetPath }}/application.js"></script>
     {% endblock %}
   </body>
 
 </html>
-
-
