--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -1,5 +1,10 @@
 {% extends '_layout.njk' %}
 
 {% block content %}
-  <h1>Hello world</h1>
+  <section class="hero">
+    <div class="hero-body">
+      <p class="title">Hello world!</p>
+      <p class="subtitle">Welcome to {{ appName }}</p>
+    </div>
+  </section>
 {% endblock %}
